# Habitus-open-sourced-code

./: LICENSE
collection/edge_camera/: svo_recording.py
collection/headset/: XRPlatformControllerSetupOculus.cs  camerap_position_magic_leap.cs
collection/phone/: CMakeLists.txt  data_collector_android.c  setup_libpcap.sh
prediction/BP/: configs_bp.py  dataset_bp.py  evaluate_bp.py  model_bp.py  train_bp.py
prediction/GBDT/: configs_gbdt.py  evaluate_gbdt.py  train_gbdt.py
prediction/RNN/: configs_rnn.py  dataset_rnn.py  evaluate_rnn.py  model_rnn.py  train_rnn.py
prediction/Seq2Seq/: configs_seq2seq.py  convert2ts_seq2seq.py  convert2ts_seq2seq_mobile.py  dataset_seq2seq.py  evaluate_seq2seq.py  model_seq2seq.py  train_seq2seq.py
prediction/Stat/: configs_stat.py  evaluate_stat.py
prediction/utils/: parse_log.py  utils.py
